--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,5 @@
 @import './vars.scss';
+@import './form.scss';
 
 * {
     box-sizing: border-box;
@@ -6,7 +7,7 @@
 
 html {
     font-family: 'Roboto', sans-serif;
-    font-size: 13px;
+    font-size: 16px;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -40,6 +41,15 @@ input {
 ul {
     list-style-type: none;
     padding: 0;
+}
+
+h4 {
+    color: $darkgrey;
+    font-weight: 400;
+    margin-bottom: 3.125rem;
+    max-width: 63.9%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .rp {
