--- a/vars.scss
+++ b/vars.scss
@@ -2,6 +2,8 @@ $lightblue: #e6ebee;
 $blue: #4ea4f6;
 $darkblue: #1da1f1;
 
+$red: #e53935;
+
 $lightgreen: #eeffde;
 $green: #4dcd5e;
 $darkgreen: #50af4f;
