--- a/src/pages/tgweb/chatBar.scss
+++ b/src/pages/tgweb/chatBar.scss
@@ -1,6 +1,10 @@
 @import '../../vars.scss';
 
 #chatBar {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+
     &__header {
         height: 5.52%;
         min-height: 58px;
@@ -65,5 +69,9 @@
     }
     &__pinnedList {
         border-bottom: 1px solid $lightgrey;
+    }
+    &__lists {
+        overflow-y: scroll;
+        flex-grow: 1;
     }
 }
