--- a/src/pages/tgweb/chatItem.scss
+++ b/src/pages/tgweb/chatItem.scss
@@ -1,12 +1,90 @@
+@import '../../vars.scss';
 .chatItem {
+    display: flex;
     border-radius: 10px;
     padding: 9px;
     transition: background-color 150ms ease-out;
 
+    &__avatar-wrapper {
+        position: relative;
+        &.online:before {
+            content: '';
+            width: 10px;
+            height: 10px;
+            background-color: #0ac630;
+            position: absolute;
+            bottom: 1px;
+            right: 1px;
+            border-radius: 50%;
+            border: 2px solid #fff;
+        }
+    }
+
     &__avatar {
         width: 54px;
         height: 54px;
-        background-color: aquamarine;
+        background-color: $blue;
         border-radius: 50%;
+        flex-shrink: 0;
+    }
+    &__content {
+        position: relative;
+        flex-grow: 1;
+        padding-left: 9px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    &__upper {
+        display: flex;
+        line-height: 1.5;
+        align-items: center;
+    }
+
+    &__name {
+        font-weight: 500;
+        flex-grow: 1;
+    }
+
+    &__status {
+        color: $darkgreen;
+        width: 19px;
+    }
+
+    &__time {
+        font-size: 0.75rem;
+        color: $darkgrey;
+    }
+
+    &__message {
+        line-height: 1.5;
+        color: $darkgrey;
+        font-weight: 400;
+    }
+
+    &__onlineMsg {
+        color: $blue;
+    }
+
+    &__badge {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        font-size: 0.875rem;
+        height: 24px;
+        min-width: 24px;
+        text-align: center;
+        line-height: 1.5rem;
+        background-color: $grey;
+        border-radius: 12px;
+        color: $white;
+        font-weight: 700;
+        &.counter {
+            padding: 0 8px;
+        }
+        &.green-bg {
+            background-color: $green;
+        }
     }
 }
